# Texer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  needs
include/tex/: error.h  load.h
src/: common.c  common.h  error.c  load.c  load.h  texer.c  types.h
tests/: CMakeLists.txt  main.c
